# decentralized-did

./: .env  .env.example  .env.test  .gitignore  APP-STORE-DEPLOYMENT.md  APP_LOADING_FIX_COMPLETE.md  AUDIT_CHECKLIST.md  AUDIT_COMPLETE_SUMMARY.txt  AUDIT_DOCUMENTATION_INDEX.md  AUDIT_EXECUTIVE_SUMMARY.md  BIOMETRIC_ENROLLMENT_SUCCESS_FIX.md  BIOVERA-BRAND-CONTACT.md  BIOVERA-COMPLETE-SUMMARY.md  BIOVERA-DEPLOYMENT-READY.md  BIOVERA-FINAL-BUILD-COMPLETE.md  BIOVERA-GO-LIVE.md  BIOVERA-PRODUCTION-READY.md  BIOVERA-REBRAND-COMPLETE.md  BIOVERA-UX-REDESIGN-COMPLETE.md  BUILD_AND_DEPLOYMENT_COMPLETE.md  BUILD_REPORT_2025-10-28.md  COMPONENT-INVENTORY.md  COMPREHENSIVE-STATUS.md  COMPREHENSIVE_AUDIT_REPORT.md  CORRECT-LOCKOUT-RESET.md  DASHBOARD_2025-10-28.txt  DELIVERABLES.md  DEMO-WALLET-DESIGN-ALIGNMENT.md  DEMO-WALLET-DESIGN-IMPLEMENTATION-COMPLETE.md  DEPLOYMENT-INDEX.md  DEPLOYMENT-READINESS.md  DEPLOYMENT-SUCCESS.md  DEPLOYMENT_ACHIEVEMENT.md  DEPLOYMENT_READINESS.md  DEVELOPMENT-ENVIRONMENT-COMPLETE.md  DOCUMENTATION-INDEX.md  DUPLICATION-VERIFICATION.md  Dockerfile.backend  EXECUTION_SUMMARY_2025-10-28.md  FINAL-COMPLETION-REPORT.md  (+63 more)
.devcontainer/: devcontainer.json  setup.sh
.github/: copilot-instructions.md  tasks.md
cip30-integration/: app.js
cip68-design/: README.md  validator.plutus
cip68-implementation/: nft_builder.py
core/: Dockerfile.backend  backup.sh  deploy-development.sh  deploy-production.sh  docker-compose.yml  renew-ssl.sh
decentralized_did/: __init__.py
demo-wallet/: COMPREHENSIVE-AUDIT-REPORT.md  DESIGN-AUDIT-PLAN.md  Dockerfile  (+37 more)
(+916 files in other folders)
