[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "decentralized-did"
version = "0.1.0"
description = "Decentralized biometric DID toolkit for Cardano"
readme = "README.md"
authors = [{name = "FractionEstate Hackathon Team"}]
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
keywords = ["cardano", "biometrics", "did", "identity"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
dec-did = "decentralized_did.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["src"]
